font size was too big, fix

--- a/midterm/css/main.css
+++ b/midterm/css/main.css
@@ -52,7 +52,7 @@ img {
 }
 
 article {
-    font-size: 40px;
+    font-size: 35px;
 }
 
 h2 {
@@ -60,7 +60,7 @@ h2 {
 }
 
 .factlist li{
-    font-size: 40px
+    font-size: 35px
 }
 
 form {
